--- a/openApiDocs/v1.0/CrossDeviceExperiences.yml
+++ b/openApiDocs/v1.0/CrossDeviceExperiences.yml
@@ -10,8 +10,11 @@ paths:
     get:
       tags:
         - users.userActivity
-      summary: Get activities from users
-      description: The user's activities across devices. Read-only. Nullable.
+      summary: Get user activities
+      description: 'Get activities for a given user. Unlike the **recent** OData function, activities without histories will be returned. The permission UserActivity.ReadWrite.CreatedByApp will apply extra filtering to the response, so that only activities created by your application are returned. This server-side filtering might result in empty pages if the user is particularly active and other applications have created more recent activities. To get your application''s activities, use the **nextLink** property to paginate.'
+      externalDocs:
+        description: Find more info here
+        url: https://docs.microsoft.com/graph/api/projectrome-get-activities?view=graph-rest-1.0
       operationId: user_ListActivity
       parameters:
         - name: user-id
@@ -974,7 +977,7 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/microsoft.graph.ODataErrors.ErrorDetails'
-        innererror:
+        innerError:
           $ref: '#/components/schemas/microsoft.graph.ODataErrors.InnerError'
       additionalProperties:
         type: object
